--- a/index.html
+++ b/index.html
@@ -8,3 +8,31 @@
         <h2>Hola Mundo</h2>
     </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Indice mi pagina</title>
+</head>
+<body>
+    <h1>Hola mundo</h1>
+
+    <ul>
+        <li>Perro</li>
+        <li>Gato</li>
+        <li>Canario</li>
+    </ul>
+    <ol>
+        <li>Perro</li>
+        <li>Gato</li>
+        <li>Canario</li>
+    </ol>
+    <a href="dos.html">Ir a la pagina dos</a>
+    <img src="índice.jpg" alt="Imagen de maik wasausky"/>
+</body>
+</html>
+<!--Brijido compita, pongale weno-->
