--- a/index.html
+++ b/index.html
@@ -31,8 +31,38 @@
         <li>Gato</li>
         <li>Canario</li>
     </ol>
+    <!--hipervinculo-->
     <a href="dos.html">Ir a la pagina dos</a>
-    <img src="índice.jpg" alt="Imagen de maik wasausky"/>
+    <!--hipervinculo a otra pagina-->
+    <a href="https://www.duoc.cl">Ir a Duoc</a>
+
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <img src="índice.jpg" alt="Imagen de maik wasausky" height="500" width="500"/>
+    <a href="#parte2">sección 2</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a id="parte 2"></a>
 </body>
 </html>
 <!--Brijido compita, pongale weno-->
